@@ -1,3 +1,8 @@
+2010-12-03  Konstantinos Poulios <logari81@gmail.com>
+
+	* plot/pbaspect.m, plot/daspect.m: Fix handling of input array of
+	length 2.
+
 2010-12-02  Ben Abbott <bpabbott@mac.com>
 
 	* image/image.m: Only flip y-axis if nextplot property equal
